[gd_scene load_steps=14 format=3 uid="uid://c2bvu0xtdr23g"]

[ext_resource type="Script" uid="uid://dph15r4ghmcah" path="res://scripts/gdscript/ui.gd" id="1_yev5y"]
[ext_resource type="Texture2D" uid="uid://cuadabt74acf0" path="res://assets/sprite/cawfee.png" id="2_8dubc"]
[ext_resource type="Texture2D" uid="uid://crsh3pelhvhkb" path="res://assets/sprite/tissues.png" id="3_p7vwb"]
[ext_resource type="Resource" uid="uid://cwphjw3obls37" path="res://inks/painting_game_dialouge.ink" id="3_vdcm2"]
[ext_resource type="Texture2D" uid="uid://cuvl2v1mp0bs2" path="res://assets/sprite/used_tissuessm.png" id="4_8dubc"]
[ext_resource type="Script" uid="uid://6fu8l80dtoup" path="res://scripts/CSharp/ink_runner.cs" id="4_gdt2y"]
[ext_resource type="Theme" uid="uid://dqhx1hnyv7h83" path="res://button.tres" id="4_p7vwb"]
[ext_resource type="AudioStream" uid="uid://cjax2ddg2rme8" path="res://assets/sfx/Talking sound 1.mp3" id="5_cgfq5"]
[ext_resource type="Script" uid="uid://dg2cp05qypv1k" path="res://scenes/talking_noises.gd" id="5_ktti3"]
[ext_resource type="Texture2D" uid="uid://s4gp5vvu7sj4" path="res://assets/painting/sad_boy.png" id="7_vdcm2"]
[ext_resource type="AudioStream" uid="uid://oqw408ruwdjm" path="res://assets/sfx/1.wav" id="10_7dvkv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlq6p"]
content_margin_left = 85.0
content_margin_top = 40.0
content_margin_right = 50.0
content_margin_bottom = 20.0
bg_color = Color(0.0627451, 0.0705882, 0.164706, 0.690196)
border_width_top = 2
border_color = Color(0.8, 0.8, 0.282353, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nt7q6"]
content_margin_left = 20.0
content_margin_top = 3.0
content_margin_right = 20.0
content_margin_bottom = 4.0
bg_color = Color(0.635294, 0.584314, 0.266667, 1)
border_width_left = 3
border_width_top = 1
border_width_right = 2
border_color = Color(0.8, 0.8, 0.8, 0.717647)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_yev5y")

[node name="dialog_manager" type="CanvasLayer" parent="."]
script = ExtResource("4_gdt2y")
story = ExtResource("3_vdcm2")
buttonTheme = ExtResource("4_p7vwb")

[node name="text_box" type="PanelContainer" parent="dialog_manager"]
z_index = 20
layout_direction = 2
anchors_preset = -1
anchor_top = 0.691
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.231964
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xlq6p")

[node name="dialog" type="RichTextLabel" parent="dialog_manager/text_box"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "Hello world"

[node name="talking_noises" type="AudioStreamPlayer" parent="dialog_manager/text_box"]
stream = ExtResource("5_cgfq5")
volume_db = -20.0
pitch_scale = 2.6
script = ExtResource("5_ktti3")

[node name="name_box" type="PanelContainer" parent="dialog_manager"]
z_index = 21
anchors_preset = -1
anchor_left = 0.058
anchor_top = 0.668
anchor_right = 0.188
anchor_bottom = 0.715
offset_left = 0.183998
offset_top = 0.135986
offset_right = 0.423996
offset_bottom = -0.320007
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nt7q6")

[node name="name" type="RichTextLabel" parent="dialog_manager/name_box"]
layout_mode = 2
bbcode_enabled = true
text = "Hello world"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_container" type="HBoxContainer" parent="dialog_manager"]
anchors_preset = -1
anchor_left = 0.319
anchor_top = 0.61
anchor_right = 0.836
anchor_bottom = 0.68

[node name="Button" type="Button" parent="dialog_manager/button_container"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_p7vwb")
text = "test_1"

[node name="Button2" type="Button" parent="dialog_manager/button_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "test2"

[node name="Button3" type="Button" parent="dialog_manager/button_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "test3"

[node name="sad_boy" type="Sprite2D" parent="dialog_manager"]
visible = false
position = Vector2(313, 368)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_vdcm2")

[node name="bad_boy" type="Sprite2D" parent="dialog_manager"]
visible = false
position = Vector2(313, 368)
scale = Vector2(0.7, 0.7)
texture = ExtResource("7_vdcm2")
flip_h = true

[node name="coffee_lady" type="Sprite2D" parent="dialog_manager"]
visible = false
position = Vector2(720.55, 337.975)
scale = Vector2(1.8416, 0.63494)
texture = ExtResource("7_vdcm2")
flip_h = true

[node name="inventory" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 0.648
offset_left = 5.20007
offset_bottom = -1.90399
grow_horizontal = 0
size_flags_vertical = 3

[node name="Item1" type="MarginContainer" parent="inventory"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="tissue" type="Sprite2D" parent="inventory/Item1"]
position = Vector2(50, 50)
scale = Vector2(0.04, 0.04)
texture = ExtResource("3_p7vwb")

[node name="Item2" type="MarginContainer" parent="inventory"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="coffee" type="Sprite2D" parent="inventory/Item2"]
position = Vector2(50, 50)
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_8dubc")

[node name="Item3" type="MarginContainer" parent="inventory"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="crybox" type="Sprite2D" parent="inventory/Item3"]
position = Vector2(50, 50)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_8dubc")

[node name="Item4" type="MarginContainer" parent="inventory"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="anime_boy" type="Sprite2D" parent="inventory/Item4"]
position = Vector2(50, 50)
rotation = -3.14159
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_8dubc")

[node name="ItemGet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_7dvkv")

[connection signal="DialogFinished" from="dialog_manager" to="." method="_on_dialog_manager_dialog_finished"]
[connection signal="SetCharVisible" from="dialog_manager" to="." method="changeChar"]
